[gd_scene load_steps=27 format=2]

[ext_resource path="res://prefabs/fade.tscn" type="PackedScene" id=1]
[ext_resource path="res://solo_env.tres" type="Environment" id=2]
[ext_resource path="res://Scenes/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://prefabs/block.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/SoundToggleButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Level1.gd" type="Script" id=6]
[ext_resource path="res://prefabs/Water.tscn" type="PackedScene" id=7]
[ext_resource path="res://Meshes/FerroVelho_v1.tres" type="MeshLibrary" id=8]
[ext_resource path="res://Scenes/DirectionalLight.tscn" type="PackedScene" id=9]
[ext_resource path="res://prefabs/home.tscn" type="PackedScene" id=10]
[ext_resource path="res://prefabs/EscapePalete.tscn" type="PackedScene" id=11]
[ext_resource path="res://prefabs/Carro4.tscn" type="PackedScene" id=12]
[ext_resource path="res://prefabs/Carro1.tscn" type="PackedScene" id=13]
[ext_resource path="res://prefabs/Carro2.tscn" type="PackedScene" id=14]
[ext_resource path="res://prefabs/Death.tscn" type="PackedScene" id=15]
[ext_resource path="res://prefabs/Cone.tscn" type="PackedScene" id=16]
[ext_resource path="res://prefabs/peixe.tscn" type="PackedScene" id=17]
[ext_resource path="res://prefabs/Pneus.tscn" type="PackedScene" id=18]
[ext_resource path="res://prefabs/Carro3.tscn" type="PackedScene" id=19]
[ext_resource path="res://prefabs/Cerca.tscn" type="PackedScene" id=20]
[ext_resource path="res://prefabs/Guicho.tscn" type="PackedScene" id=21]
[ext_resource path="res://prefabs/save.tscn" type="PackedScene" id=22]
[ext_resource path="res://prefabs/load.tscn" type="PackedScene" id=23]
[ext_resource path="res://Scenes/TimerContainer.tscn" type="PackedScene" id=25]
[ext_resource path="res://Assets/Blender/ItensFerroVelho/Asfalto_Ferro_Velho_Olho.glb" type="PackedScene" id=26]

[sub_resource type="CapsuleMesh" id=3]

[node name="Level15" type="Spatial"]
script = ExtResource( 6 )

[node name="player" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 3, 5 )

[node name="Water" parent="." instance=ExtResource( 7 )]

[node name="Death" parent="." instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11, -100, 11 )

[node name="GridMap" type="GridMap" parent="." groups=["wall"]]
mesh_library = ExtResource( 8 )
data = {
"cells": PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 12, 2, 0, 13, 2, 0, 0, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 4, 3, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 3, 0, 12, 3, 0, 13, 3, 0, 0, 4, 0, 1, 4, 0, 2, 4, 0, 4, 4, 0, 5, 4, 0, 6, 4, 0, 7, 4, 0, 8, 4, 0, 9, 4, 0, 12, 4, 0, 13, 4, 0, 0, 5, 0, 1, 5, 0, 2, 5, 0, 3, 5, 0, 4, 5, 0, 5, 5, 0, 6, 5, 0, 7, 5, 0, 8, 5, 0, 9, 5, 0, 0, 6, 0, 1, 6, 0, 2, 6, 0, 3, 6, 0, 4, 6, 0, 5, 6, 0, 6, 6, 0, 7, 6, 0, 8, 6, 0, 9, 6, 0, 12, 6, 0, 13, 6, 0, 0, 7, 0, 1, 7, 0, 2, 7, 0, 3, 7, 0, 4, 7, 0, 5, 7, 0, 6, 7, 0, 7, 7, 0, 8, 7, 0, 9, 7, 0, 12, 7, 0, 13, 7, 0, -65529, 7, 15, 0, 8, 0, 1, 8, 0, 2, 8, 0, 3, 8, 0, 4, 8, 0, 5, 8, 0, 6, 8, 0, 7, 8, 0, 8, 8, 0, 9, 8, 0, 12, 8, 0, 0, 9, 0, 1, 9, 0, 2, 9, 0, 3, 9, 0, 4, 9, 0, 5, 9, 0, 6, 9, 0, 7, 9, 0, 9, 9, 0, 0, 10, 0, 1, 10, 0, 2, 10, 0, 3, 10, 0, 4, 10, 0, 5, 10, 0, 6, 10, 0, 7, 10, 0, 8, 10, 0, 9, 10, 0 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="block" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 3, 9 )

[node name="block2" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 3, 19 )

[node name="peixe" parent="." instance=ExtResource( 17 )]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 25, 4.1, 7 )

[node name="ItensFerroVelho" type="Spatial" parent="."]

[node name="Asfalto_Ferro_Velho_Olho" parent="ItensFerroVelho" instance=ExtResource( 26 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 17, 1, 19 )

[node name="Asfalto_Ferro_Velho_Olho2" parent="ItensFerroVelho" instance=ExtResource( 26 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 7, 1, 9 )

[node name="Pneus" parent="ItensFerroVelho" instance=ExtResource( 18 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 3, 17 )

[node name="Cone" parent="ItensFerroVelho" instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 3, 13 )

[node name="Guicho" parent="ItensFerroVelho" instance=ExtResource( 21 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 12, 3, 11 )

[node name="Carro1" parent="ItensFerroVelho" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 18, 3, 21 )

[node name="Carro2" parent="ItensFerroVelho" instance=ExtResource( 14 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2, 3, 5 )

[node name="Carro3" parent="ItensFerroVelho" instance=ExtResource( 19 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1, 3, 20 )

[node name="Carro4" parent="ItensFerroVelho" instance=ExtResource( 12 )]
transform = Transform( -2.18557e-07, 0, 1, 0, 1, 0, -1, 0, -2.18557e-07, 13, 3, 20 )

[node name="Cerca" parent="ItensFerroVelho" instance=ExtResource( 20 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2, 3, 22 )

[node name="Cerca2" parent="ItensFerroVelho" instance=ExtResource( 20 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 6, 3, 22 )

[node name="Cerca3" parent="ItensFerroVelho" instance=ExtResource( 20 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 3, 16 )

[node name="Cerca4" parent="ItensFerroVelho" instance=ExtResource( 20 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 3, 12 )

[node name="EscapePalete" parent="ItensFerroVelho" instance=ExtResource( 11 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 9, 3, 19 )

[node name="Cam" type="Spatial" parent="."]
transform = Transform( 0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 11, 2, 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="target" type="MeshInstance" parent="Cam"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
visible = false
mesh = SubResource( 3 )

[node name="Camera" type="Camera" parent="Cam"]
transform = Transform( -1, -6.18172e-08, 6.18172e-08, 0, 0.707107, 0.707107, -8.74228e-08, 0.707107, -0.707107, 0, 12, -10 )
environment = ExtResource( 2 )
projection = 1
current = true
size = 30.0
near = 0.5
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="DirectionalLight" parent="." instance=ExtResource( 9 )]
light_color = Color( 0.635294, 0.541176, 0.207843, 1 )
light_energy = 0.42

[node name="home" parent="." instance=ExtResource( 10 )]

[node name="salvar" parent="." instance=ExtResource( 22 )]

[node name="load" parent="." instance=ExtResource( 23 )]

[node name="SoundToggleButton" parent="." instance=ExtResource( 5 )]

[node name="Timer2" type="Timer" parent="."]

[node name="TimerContainer" parent="." instance=ExtResource( 25 )]

[node name="fade" parent="." instance=ExtResource( 1 )]

[connection signal="body_entered" from="Death/DeathZones" to="." method="_on_DeathZones_body_entered"]
[connection signal="body_entered" from="peixe" to="peixe" method="_on_peixe_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="home/home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="salvar/salvar" to="." method="_on_salvar_pressed"]
[connection signal="pressed" from="load/load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="SoundToggleButton/SoundToggleButton" to="." method="_on_SoundToggleButton_pressed"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]

[editable path="Death"]
[editable path="home"]
[editable path="salvar"]
[editable path="load"]
[editable path="SoundToggleButton"]
